# nds-rs

./: Cargo.toml  LICENSE
img/: Cargo.toml
img/src/: lib.rs
panic/: Cargo.toml
panic/src/: lib.rs
registers/: Cargo.toml
registers/src/: arm9.rs  lib.rs
rt/: Cargo.toml  TODO  build.rs  link.x  think
rt/src/: bios.rs  crt0.s  file  framebuffer.rs  interrupt.rs  lib.rs
